# sim_ws

./: .gitignore  .gitmodules  setup_local.sh
src/a2_description/: CMakeLists.txt  package.xml
src/a2_description/a2/: a2.xml
src/a2_description/launch/: display.launch.py
src/a2_description/mjcf/: a2.xml  scene.xml  scene_terrain.xml
src/a2_description/rviz/: default.rviz
src/a2_description/src/: bridge.cpp  sim_clock.cpp
src/a2_description/urdf/: a2.urdf
src/a2_mujoco/: CMakeLists.txt  config.yaml  mujoco  package.xml
src/a2_mujoco/launch/: a2_mujoco.launch.py
src/a2_mujoco/src/: main.cc  unitree_sdk2_bridge.h
src/a2_mujoco/src/joystick/: jstest.cc
src/locomotion_controller/: CMakeLists.txt  package.xml
src/locomotion_controller/models/: policy.onnx
src/locomotion_controller/scripts/: locomotion_controller.py
src/mujoco_ros2_control/: CMakeLists.txt
src/mujoco_ros2_control/examples/unitree_a2_mujoco/: CMakeLists.txt  a2.xml
src/mujoco_ros2_control/examples/unitree_a2_mujoco/config/: unitree_a2_controllers.yaml
src/mujoco_ros2_control/examples/unitree_a2_mujoco/launch/: unitree_a2.launch.py
src/mujoco_ros2_control/examples/unitree_a2_mujoco/urdf/: a2.urdf
src/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_resource_manager.hpp  mujoco_system_interface.hpp
src/mujoco_ros2_control/include/mujoco_ros2_sensors/: lidar_sensor.hpp  mujoco_ros2_sensors.hpp
src/mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_ros2_control_plugin.hpp
src/mujoco_ros2_control/src/: imu_sensor.cpp  lidar_sensor.cpp  mujoco_ros2_control_parameters.yaml  mujoco_ros2_control_plugin.cpp  mujoco_ros2_sensors.cpp  mujoco_system.cpp  pose_sensor.cpp
src/standup/: CMakeLists.txt  package.xml
src/standup/src/: stand_example.cpp
src/teleop/: CMakeLists.txt  package.xml
src/teleop/launch/: teleop_joy.launch.py
src/teleop/src/: teleop_joy.cpp
src/unitree_a2_mujoco/: a2.xml  package.xml  scene_terrain.xml
src/unitree_a2_mujoco/config/: default.rviz  joint_limits.yaml  unitree_a2_controllers.yaml
src/unitree_a2_mujoco/launch/: unitree_a2.launch.py
src/unitree_a2_mujoco/urdf/: a2.urdf
