<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a2_mujoco</name>
  <version>0.0.1</version>
  <description>Unitree MuJoCo simulation wrapped for ROS 2</description>
  <maintainer email="nileshbalu2002@gmail.com">user</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>a2_description</exec_depend>
  <depend>ament_index_cpp</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>